--- a/Login page easy/index.html
+++ b/Login page easy/index.html
@@ -8,17 +8,21 @@
   </head>
   <body>
     <script type="text/javascript" src="js/index.js"></script>
-    <div class="card">
-      <div class="image">
-        <img src="https://npm.github.io/new-docs/public/images/publishing.svg" alt="Immagine" id="logo">
-      </div>
-      <div class="content">
-      <h2>Sign In</h2>
-        <label for="email">Email</label>
-        <input type="email" name="email" placeholder="Email" required id="email" value="eve.holt@reqres.in">
-        <label for="password">Password</label>
-        <input type="password" name="password" placeholder="Password" required id="password" value="cityslicka">
-        <input type="submit" name="signin" value="Sign In" onclick="signIn()">
+    <div class="total">
+      <div class="container">
+        <div class="card">
+          <div class="image">
+            <img src="https://npm.github.io/new-docs/public/images/publishing.svg" alt="Immagine" id="logo">
+          </div>
+          <div class="content">
+            <h2>Sign In</h2>
+            <label for="email">Email</label>
+            <input type="email" name="email" placeholder="Email" required id="email" value="eve.holt@reqres.in">
+            <label for="password">Password</label>
+            <input type="password" name="password" placeholder="Password" required id="password" value="cityslicka">
+            <input type="submit" name="signin" value="Sign In" onclick="signIn()">
+          </div>
+        </div>
       </div>
     </div>
   </body>
