--- a/LoginPageEasy/welcome.html
+++ b/LoginPageEasy/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Welcome</title>
   </head>
-  <body onload="verifyToken()">
+  <body>
     <script type="text/javascript" src="js/welcome.js"></script>
     <p>
       Welcome <label id="email"></label>, your token is: <i><label id="token"></label></i>
